--- a/Projets-Maven-AlloDocteur/maven-allo-docteur-service/pom.xml
+++ b/Projets-Maven-AlloDocteur/maven-allo-docteur-service/pom.xml
@@ -4,12 +4,15 @@
     <groupId>com.cours</groupId>
     <artifactId>maven-allo-docteur-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
+        <modules>
+            <module>../maven-allo-docteur-dao</module>
+        </modules>
     <dependencies>
         <dependency>
             <groupId>com.cours</groupId>
