--- a/Projets-Maven-AlloDocteur/maven-allo-docteur-dao/pom.xml
+++ b/Projets-Maven-AlloDocteur/maven-allo-docteur-dao/pom.xml
@@ -79,9 +79,9 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>unknown.binary</groupId>
-            <artifactId>hibernate-jpamodelgen-4.3.1.Final</artifactId>
-            <version>SNAPSHOT</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+            <version>5.2.6.Final</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
