--- a/Projets-Maven-AlloDocteur/maven-allo-docteur-web/pom.xml
+++ b/Projets-Maven-AlloDocteur/maven-allo-docteur-web/pom.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.cours</groupId>
     <artifactId>maven-allo-docteur-web</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
+    <packaging>war</packaging>
     <name>maven-allo-docteur-web</name>
-
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
-    
-    <modules>
-        <module>../maven-allo-docteur-service</module>
-    </modules>
-     
-    
     <dependencies>
+        <!--
         <dependency>
+            <groupId>com.cours</groupId>
+            <artifactId>maven-allo-docteur-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+         <dependency>
             <groupId>com.cours</groupId>
             <artifactId>maven-allo-docteur-service</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -32,6 +28,25 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        -->
+        <!-- Pour les utilisateur du serveur d'application Tomcat ajouter la dependance org.glassfish.web -->
+        <!--
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jstl-impl</artifactId>
+            <version>1.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>servlet-api</artifactId>
+                    <groupId>javax.servlet</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jsp-api</artifactId>
+                    <groupId>javax.servlet.jsp</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -53,28 +68,9 @@
             <version>4.0.1.Final</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.8.9</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version> 5.1.41</version>
-        </dependency>
-        <dependency>
-            <groupId>com.ibatis</groupId>
-            <artifactId>ibatis2-common</artifactId>
-            <version>2.1.7.597</version>
-            <scope>test</scope>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -92,8 +88,13 @@
             <version>1.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -143,5 +144,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
