--- a/Projets-Maven-AlloDocteur/maven-allo-docteur-web/src/main/webapp/WEB-INF/web.xml
+++ b/Projets-Maven-AlloDocteur/maven-allo-docteur-web/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>com.cours.servlet.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AccueilMedecinServlet</servlet-name>
+        <servlet-class>com.cours.servlet.AccueilMedecinServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
     </servlet-mapping>
-       
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/applicationContext.xml</param-value>
@@ -18,7 +19,10 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-          
+    <servlet-mapping>
+        <servlet-name>AccueilMedecinServlet</servlet-name>
+        <url-pattern>/AccueilMedecinServlet</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
