--- a/Projets-Maven-AlloDocteur/maven-allo-docteur-service/pom.xml
+++ b/Projets-Maven-AlloDocteur/maven-allo-docteur-service/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.cours</groupId>
     <artifactId>maven-allo-docteur-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
