--- a/Projets-Maven-AlloDocteur/maven-allo-docteur-web/src/main/webapp/WEB-INF/web.xml
+++ b/Projets-Maven-AlloDocteur/maven-allo-docteur-web/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>AccueilMedecinServlet</servlet-name>
         <servlet-class>com.cours.servlet.AccueilMedecinServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AcceuilPatientServlet</servlet-name>
+        <servlet-class>com.cours.servlet.AcceuilPatientServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -22,6 +26,10 @@
     <servlet-mapping>
         <servlet-name>AccueilMedecinServlet</servlet-name>
         <url-pattern>/AccueilMedecinServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AcceuilPatientServlet</servlet-name>
+        <url-pattern>/AcceuilPatientServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
